--- a/MonstarHacks.Fugees.Backend/Dockerfile
+++ b/MonstarHacks.Fugees.Backend/Dockerfile
@@ -7,10 +7,9 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["MonstarHacks.Fugees.Backend/MonstarHacks.Fugees.Backend.csproj", "MonstarHacks.Fugees.Backend/"]
-RUN dotnet restore "MonstarHacks.Fugees.Backend/MonstarHacks.Fugees.Backend.csproj"
+COPY ["MonstarHacks.Fugees.Backend.csproj", "/src"]
+RUN dotnet restore "MonstarHacks.Fugees.Backend.csproj"
 COPY . .
-WORKDIR "/src/MonstarHacks.Fugees.Backend"
 RUN dotnet build "MonstarHacks.Fugees.Backend.csproj" -c Release -o /app/build
 
 FROM build AS publish
