updated models, added authentication, saving certifications to Azure Blob Storage

--- a/MonstarHacks.Fugees.Backend/appsettings.json
+++ b/MonstarHacks.Fugees.Backend/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FugeesDb": "Data Source=localhost;Initial Catalog=MonstarHacks.Fugees;User ID=sa;Password=P@ssw0rd;MultipleActiveResultSets=True"
-  }
+    "FugeesDb": ""
+  },
+  "Auth0": {
+    "Domain": "",
+    "Audience": ""
+  },
+  "BlobConnectionString": "DefaultEndpointsProtocol=https;AccountName=;AccountKey=;EndpointSuffix=core.windows.net",
+  "BlobContainerName": ""
 }
