--- a/MonstarHacks.Fugees.Backend/MonstarHacks.Fugees.Backend.csproj
+++ b/MonstarHacks.Fugees.Backend/MonstarHacks.Fugees.Backend.csproj
@@ -7,10 +7,12 @@
 	  <LangVersion>preview</LangVersion>
 	  <UserSecretsId>14192df9-6594-406b-846a-a918c36dfd78</UserSecretsId>
 	  <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	  <Configurations>Debug;Release;usingAuth</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
       <PrivateAssets>all</PrivateAssets>
